force-app/package/data-model/objects/Child_Test_sObject__c/Child_Test_sObject__c.object-meta.xml
<CustomObject>
    <description>An sObject that is specifically designed for testing purposes only so that Salesforce Records can be tested fully org agnostic.</description>
    <label>Child Test sObject</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Test sObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>