force-app/package/data-model/objects/Child_Test_sObject__c/fields/Allow_Delete__c.field-meta.xml
<CustomField>
    <fullName>Allow_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to simulate deletion preventative behaviour.</description>
    <inlineHelpText>Check this box to simulate deletion preventative behaviour.</inlineHelpText>
    <label>Allow Delete</label>
    <type>Checkbox</type>
</CustomField>