force-app/package/data-model/objects/Child_Test_sObject__c/fields/Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Encrypted__c</fullName>
    <label>Encrypted</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>