force-app/package/data-model/objects/Child_Test_sObject__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <defaultValue>&apos;Auto Populated&apos;</defaultValue>
    <description>Unique identifier for an External System</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for an External System</inlineHelpText>
    <label>External Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>