force-app/package/data-model/objects/Child_Test_sObject__c/fields/Ignore_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to ignore all related Apex Triggers on this record.</description>
    <inlineHelpText>Check this box to ignore all related Apex Triggers on this record.</inlineHelpText>
    <label>Ignore Triggers</label>
    <type>Checkbox</type>
</CustomField>