force-app/package/data-model/objects/Child_Test_sObject__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Example checkbox to set a default record</description>
    <inlineHelpText>Example checkbox to set a default record</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>