force-app/package/data-model/objects/Child_Test_sObject__c/fields/Parent_Test_sObject__c.field-meta.xml
<CustomField>
    <fullName>Parent_Test_sObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master Detail relationship to the parent</description>
    <inlineHelpText>Master Detail relationship to the parent</inlineHelpText>
    <label>Parent Test sObject</label>
    <referenceTo>Parent_Test_sObject__c</referenceTo>
    <relationshipLabel>Child Test sObjects</relationshipLabel>
    <relationshipName>Child_Test_sObjects</relationshipName>
    <type>Lookup</type>
</CustomField>