force-app/package/data-model/objects/Child_Test_sObject__c/fields/Rich_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text_Area__c</fullName>
    <label>Rich Text Area</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>